--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -20,6 +20,7 @@
   @--footer-bg-color:#fff;
   @--footer-text-color:#409EFF;
   @--app-main-bg-color:#FFFFFF;
+  @--border-color:#58626A;
   .header{
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
@@ -73,13 +74,16 @@
   }
   .side-menu{
     background: @--main-bg-color;
+    .user-wrapper{
+      border-bottom-color:@--border-color;
+    }
   }
   .dynamic-menu{
-    .el-submenu__title,.el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
+    .el-sub-menu__title,.el-menu-item,.el-sub-menu__title:focus,.el-menu-item:focus{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
     }
-    .el-submenu {
+    .el-sub-menu {
       .el-menu-item{
         min-width: unset;
         line-height: 40px;
@@ -101,16 +105,16 @@
     //    background-color: @--menu-item-hover-bg-color;
     //  }
     //}
-    .el-submenu__title{
+    .el-sub-menu__title{
       height: 40px;
       line-height: 40px;
     }
-    .el-submenu__title:hover{
+    .el-sub-menu__title:hover{
       color: @--menu-text-hover-color;
       background-color: @--menu-item-hover-bg-color;
     }
-    .el-submenu.is-active{
-      .el-submenu__title{
+    .el-sub-menu.is-active{
+      .el-sub-menu__title{
         color:@--menu-item-active-text-color;
       }
     }
@@ -164,11 +168,11 @@
     padding: 0;
   }
   .box-item-link{
-    .el-submenu__title,.el-menu-item{
+    .el-sub-menu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
     }
-    .el-menu-item i,.el-submenu__title i{
+    .el-menu-item i,.el-sub-menu__title i{
       color: inherit;
     }
     .el-menu-item{
