--- a/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
@@ -20,6 +20,7 @@
   @--footer-bg-color:#fff;
   @--footer-text-color:#409EFF;
   @--app-main-bg-color:#eaecef;
+  @--border-color:#58626A;
   .header{
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
@@ -75,6 +76,9 @@
   }
   .side-menu{
     background: @--main-bg-color;
+    .user-wrapper{
+      border-bottom-color:@--border-color;
+    }
   }
   .dynamic-menu{
     padding: 20px 14px;
@@ -82,11 +86,11 @@
       line-height: 40px;
       height: 40px;
     }
-    .el-submenu__title,.el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
+    .el-sub-menu__title,.el-menu-item,.el-sub-menu__title:focus,.el-menu-item:focus{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
     }
-    .el-submenu {
+    .el-sub-menu {
       .el-menu-item{
         min-width: unset;
         margin: 8px 0;
@@ -99,12 +103,12 @@
         }
       }
     }
-    .el-submenu__title:hover,.el-menu-item:hover{
+    .el-sub-menu__title:hover,.el-menu-item:hover{
       color: @--menu-text-hover-color;
       background-color: @--menu-item-hover-bg-color;
     }
-    .el-submenu.is-active{
-      .el-submenu__title{
+    .el-sub-menu.is-active{
+      .el-sub-menu__title{
         color:@--menu-item-active-text-color;
       }
     }
@@ -163,11 +167,11 @@
     padding: 0 14px;
   }
   .box-item-link{
-    .el-submenu__title,.el-menu-item{
+    .el-sub-menu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
     }
-    .el-menu-item i,.el-submenu__title i{
+    .el-menu-item i,.el-sub-menu__title i{
       color: inherit;
     }
     .el-menu-item{
