--- a/src/packages/xxWeb-box/assets/css/theme/theme-element.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-element.less
@@ -21,6 +21,7 @@
   @--footer-text-color:#409EFF;
   @--app-main-bg-color:#eaecef;
   @--border-color:#ebebeb;
+  @--user-menu-bottom-border-color:#ebebeb70;
   .header{
     color: @--topMenu-header-color;
     background: @--topMenu-header-bg-color;
@@ -104,7 +105,7 @@
   .side-menu{
     background: @--main-bg-color;
     .user-wrapper{
-      border-bottom: 1px solid @--border-color;
+      border-bottom: 1px solid @--user-menu-bottom-border-color;
     }
   }
   .dynamic-menu{
