--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -24,6 +24,7 @@
   @--layout-bg-color:#F6F8FA;
   @--user-wrapper-color: #a2a2a2;
   @--border-color:#ebebeb;
+  @--user-menu-bottom-border-color:#ebebeb70;
   .header{
     color: @--sideMenu-header-color;
     background-color: @--sideMenu-header-bg-color;
@@ -94,7 +95,7 @@
   .side-menu{
     background: @--main-bg-color;
     .user-wrapper{
-      border-bottom-color:@--border-color;
+      border-bottom-color:@--user-menu-bottom-border-color;
     }
   }
   .side-scrollbar{
