--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -20,7 +20,7 @@
   @--footer-bg-color:#fff;
   @--footer-text-color:#409EFF;
   @--app-main-bg-color:#FFFFFF;
-  @--border-color:#58626A;
+  @--user-menu-bottom-border-color:#58626A24;
   .header{
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
@@ -75,7 +75,7 @@
   .side-menu{
     background: @--main-bg-color;
     .user-wrapper{
-      border-bottom-color:@--border-color;
+      border-bottom-color:@--user-menu-bottom-border-color;
     }
   }
   .dynamic-menu{
