--- a/src/packages/xxWeb-box/assets/css/theme/theme-wdp.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-wdp.less
@@ -23,6 +23,7 @@
   @--footer-text-color:#2c68f6;
   @--app-main-bg-color:#eaecef;
   @--border-color:#58626A;
+  @--user-menu-bottom-border-color:#58626A24;
   .header{
     color: @--topMenu-header-color;
     background: @--topMenu-header-bg-color;
@@ -103,7 +104,7 @@
   .side-menu{
     background: @--main-bg-color;
     .user-wrapper{
-      border-bottom-color:@--border-color;
+      border-bottom-color:@--user-menu-bottom-border-color;
     }
   }
   .dynamic-menu{
