--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -53,6 +53,7 @@ html,body{
       display: inline-flex;
       justify-content: left;
       align-items: center;
+      flex: 1;
     }
     .hamburger {
       display: inline-block;
@@ -398,12 +399,6 @@ html,body{
       .el-drawer__header{
         display: none;
       }
-    }
-    .el-icon-dog-icon {
-      width: 24px;
-      margin-right: 5px;
-      font-size: 18px;
-      vertical-align: middle
     }
   }
 }
