优化element主题样式

--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -102,9 +102,8 @@ html,body{
         }
         box-sizing: content-box;
         text-align: left;
-        padding: 10px 12px 20px 12px;
+        padding: 10px 0 32px 0;
         height: 56px;
-        margin: 0 8px 13px 8px;
         border-bottom-width: 1px;
         border-bottom-style: solid;
       }
