修复nitro主题样式

--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -211,7 +211,8 @@
   }
   .xx-web-tab.el-tabs{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
   }
   .xx-web-tab{
     .el-tabs__item{
