--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -331,6 +331,7 @@ html,body{
       flex: 1;
       padding: 12px;
       overflow: auto;
+      height: 100%;
     }
 
     .app-main::-webkit-scrollbar{
