--- a/src/packages/xxWeb-box/assets/css/theme/theme-element.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-element.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='element']{
+.xxWeb-box[data-theme='element']{
   @--main-bg-color: #fff;
   @--text-color: #000;
   @--active-color:#409EFF;
