--- a/src/packages/xxWeb-box/assets/css/theme/theme-jeecg.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-jeecg.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='jeecg']{
+.xxWeb-box[data-theme='jeecg']{
   @--main-bg-color: #001529;
   @--text-color: #fff;
   @--active-color:#409EFF;
