--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='nitro']{
+.xxWeb-box[data-theme='nitro']{
   @--main-bg-color: #fff;
   @--text-color: #141F3F;
   @--active-color:#409EFF;
