--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='thunder']{
+.xxWeb-box[data-theme='thunder']{
   @--main-bg-color: #3C4852;
   @--text-color: #fff;
   @--active-color:#50A1FC;
