--- a/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='v2board']{
+.xxWeb-box[data-theme='v2board']{
   @--main-bg-color: #343a40;
   @--text-color: #fff;
   @--active-color:#409EFF;
