--- a/src/packages/xxWeb-box/assets/css/theme/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-vue-admin.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='vue-admin']{
+.xxWeb-box[data-theme='vue-admin']{
   @--main-bg-color: #304156;
   @--text-color: #fff;
   @--active-color:#409EFF;
