--- a/src/packages/xxWeb-box/assets/css/theme/theme-wdp.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-wdp.less
@@ -1,4 +1,4 @@
-.xxWeb-box[theme='wdp']{
+.xxWeb-box[data-theme='wdp']{
   @--main-bg-color: #2e2f33;
   @--text-color: #9e9e9e;
   @--active-color:#fff;
