--- a/src/packages/xxWeb-box/assets/css/403/403-2.less
+++ b/src/packages/xxWeb-box/assets/css/403/403-2.less
@@ -19,7 +19,7 @@ html,body{
     top: 50%;
     transform: translateY(-50%);
     .img{
-      background: url("../../imgs/403-2.png") no-repeat center center;
+      background: url("../../imgs/403-2.webp") no-repeat center center;
       width: 700px;
       height: 300px;
       background-size: contain;
