--- a/src/packages/xxWeb-box/assets/css/login/phylum-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/phylum-login.less
@@ -19,7 +19,7 @@ html,body{
   .phylum-login{
     width: 100%;
     height: 100%;
-    background-image: url("../../imgs/bg7.png");
+    background-image: url("../../imgs/bg7.webp");
     background-position: top;
     background-repeat: no-repeat;
     //background-color: #222a39;
@@ -46,7 +46,7 @@ html,body{
       height: 100%;
       flex: 0.6;
       .pic-icon{
-        background: url("../../imgs/pic2.png") center center no-repeat;
+        background: url("../../imgs/pic2.webp") center center no-repeat;
         background-size: contain;
         width: 260px;
         height: 260px;
