--- a/src/packages/xxWeb-box/assets/css/login/tree-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/tree-login.less
@@ -98,14 +98,14 @@ html,body{
       width: 100%;
       margin-bottom: 10px;
     }
-    /deep/.el-input__inner {
+    .el-input__inner {
       height: 35px;
     }
-    /deep/.el-form-item__error {
+    .el-form-item__error {
       padding-top: 0px;
       font-size: 5px;
     }
-    /deep/.el-checkbox__label {
+    .el-checkbox__label {
       font-size: 12px;
     }
   }
