--- a/src/packages/xxWeb-box/assets/css/404/404.less
+++ b/src/packages/xxWeb-box/assets/css/404/404.less
@@ -42,7 +42,7 @@ html,body{
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: url("../../imgs/cloud.png") repeat-x left bottom;
+      background: url("../../imgs/cloud.webp") repeat-x left bottom;
       background-size: contain;
     }
     .home-button{
@@ -67,7 +67,7 @@ html,body{
       position: relative;
       left: -300px;
       top: -300px;
-      background: url("../../imgs/mark1.png");
+      background: url("../../imgs/mark1.webp");
     }
   }
 }
