--- a/src/packages/xxWeb-box/assets/css/login/pig-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/pig-login.less
@@ -26,7 +26,7 @@ html,body{
     background-size: cover;
     position: relative;
     .login-div {
-      background-image: url(../../imgs/banner.png);
+      background-image: url(../../imgs/banner.webp);
       width: 1200px;
       height: 798px;
       position: absolute;
