--- a/src/packages/xxWeb-box/assets/css/login/watermelon-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/watermelon-login.less
@@ -25,7 +25,7 @@ html,body{
     .login-main {
       width: 720px;
       height: 550px;
-      background-image: url(../../imgs/longin2/bg1.png);
+      background-image: url(login2/bg1.webp);
       background-size: 100% 100%;
       border-radius: 5px;
       display: flex;
@@ -40,7 +40,7 @@ html,body{
           height: 200px;
           top: 170px;
           left: 60px;
-          background: url(../../imgs/longin2/bg2.png) no-repeat;
+          background: url(login2/bg2.webp) no-repeat;
           background-size: 100%;
         }
       }
@@ -109,7 +109,7 @@ html,body{
     .el-form-item {
       margin-bottom: 16px;
     }
-    /deep/.el-input__inner {
+    .el-input__inner {
       width: 100%;
       height: 35px;
       font-size: 10px;
@@ -120,7 +120,7 @@ html,body{
       background-color: #1a535c;
       border-color: #1a535c;
     }
-    /deep/.el-form-item__error {
+    .el-form-item__error {
       padding-top: 0px;
     }
   }
