--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,3 +1,50 @@
-//body{
-//  font-size: 4px;
-//}
+body {
+  font-size: 4px;
+}
+
+.xxWeb-box[theme='v2board'] {
+  .header {
+    background: #409EFF;
+    color: #fff;
+
+  }
+
+  .top-header {
+    .logo {
+      background: #409EFF;
+      color: #fff;
+
+    }
+
+  }
+
+  .side-scrollbar {
+    .side-menu-header {
+      background: #409EFF;
+      color: #fff;
+    }
+  }
+
+  .side-menu-header-center {
+    justify-content: left !important;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 5px;
+
+  }
+
+  .header-content {
+    .right-con {
+      .el-dropdown {
+        color: #fff !important;
+
+      }
+
+
+    }
+
+
+  }
+
+
+}
