修复sideMenu滚动条bug

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -6,45 +6,24 @@ body {
   .header {
     background: #409EFF;
     color: #fff;
-
   }
-
   .top-header {
     .logo {
       background: #409EFF;
       color: #fff;
-
     }
-
   }
-
-  .side-scrollbar {
+  .side-menu {
     .side-menu-header {
       background: #409EFF;
       color: #fff;
     }
   }
-
-  .side-menu-header-center {
-    justify-content: left !important;
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 5px;
-
-  }
-
   .header-content {
     .right-con {
       .el-dropdown {
         color: #fff !important;
-
       }
-
-
     }
-
-
   }
-
-
 }
