--- a/src/packages/xxWeb-box/lessSource/theme/theme-wdp.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-wdp.less
@@ -87,7 +87,7 @@
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
   }
-  .side-scrollbar{
+  .side-menu{
     background: @--main-bg-color;
     .side-menu-header {
       box-shadow: 0 0px 4px #00000033;
