--- a/src/packages/xxWeb-box/lessSource/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-nitro.less
@@ -94,7 +94,7 @@
   .side-menu{
     background: @--main-bg-color;
   }
-  .side-scrollbar{
+  .side-menu{
     background: @--main-bg-color;
     .side-menu-header {
       box-shadow:none;
