--- a/src/packages/xxWeb-box/lessSource/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-thunder.less
@@ -58,7 +58,7 @@
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
   }
-  .side-scrollbar{
+  .side-menu{
     background: @--main-bg-color;
     .side-menu-header {
       box-shadow:none;
