--- a/src/packages/xxWeb-box/lessSource/theme/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-vue-admin.less
@@ -56,7 +56,7 @@
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
   }
-  .side-scrollbar{
+  .side-menu{
     background: @--main-bg-color;
     .side-menu-header {
       box-shadow:none;
